--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,16 @@
-<my-app>loading</my-app>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>MuhSchaf Demo</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+
+</head>
+
+<body>
+  <my-app>loading</my-app>
+</body>
